Hamburger menus now expand and collapse correctly

--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -21,6 +21,18 @@ $large_devices_breakpoint: '1200px';
 
 @media (max-width: $small_devices_breakpoint) {
 
+  .navbar.navbar-secondary {
+    .nav > li:first-child > a {
+      padding-left: 15px;
+    }
+  }
+
+  #loan_lookup.navbar-right {
+    border: 0;
+    padding-top: 0;
+    padding-left: 15px;
+  }
+
   .page-header {
     margin-top: 9px;
     padding-bottom: 12px;
